# freven-sdk

./: .gitignore  Cargo.toml  NOTICE  README.md  rust-toolchain.toml
.github/: CONTRIBUTING.md  pull_request_template.md
crates/freven_api/: Cargo.toml  README.md
crates/freven_api/src/: lib.rs
crates/freven_avatar_api/: Cargo.toml
crates/freven_avatar_api/src/: control.rs  controller.rs  identity.rs  lib.rs  lifecycle.rs  presentation.rs
crates/freven_avatar_sdk_types/: Cargo.toml
crates/freven_avatar_sdk_types/src/: control.rs  controller.rs  identity.rs  lib.rs  presentation.rs
crates/freven_block_api/: Cargo.toml
crates/freven_block_api/src/: lib.rs
crates/freven_block_guest/: Cargo.toml
crates/freven_block_guest/src/: lib.rs
crates/freven_block_sdk_types/: Cargo.toml
crates/freven_block_sdk_types/src/: lib.rs
crates/freven_gameplay_state_api/: Cargo.toml
crates/freven_gameplay_state_api/src/: lib.rs
crates/freven_gameplay_state_guest/: Cargo.toml
crates/freven_gameplay_state_guest/src/: lib.rs
crates/freven_gameplay_state_sdk_types/: Cargo.toml
crates/freven_gameplay_state_sdk_types/src/: lib.rs
crates/freven_guest/: Cargo.toml
crates/freven_guest/src/: lib.rs
crates/freven_guest_sdk/: Cargo.toml  README.md
crates/freven_guest_sdk/src/: lib.rs
crates/freven_guest_sdk/tests/: log_macros.rs
crates/freven_mod_api/: Cargo.toml  README.md
crates/freven_mod_api/src/: lib.rs
crates/freven_sdk_types/: Cargo.toml
crates/freven_sdk_types/src/: blocks.rs  config.rs  lib.rs
crates/freven_sdk_types/tests/: visual_content_schema_fixtures.rs
crates/freven_std/: Cargo.toml
crates/freven_std/src/: action_defaults.rs  action_payloads.rs  humanoid_input.rs  lib.rs
crates/freven_volumetric_api/: Cargo.toml
crates/freven_volumetric_api/src/: lib.rs  output_builder.rs
crates/freven_volumetric_sdk_types/: Cargo.toml
crates/freven_volumetric_sdk_types/src/: addressing.rs  lib.rs  topology.rs
crates/freven_world_api/: Cargo.toml  README.md
crates/freven_world_api/src/: action.rs  character.rs  client.rs  lib.rs  lifecycle.rs  messages.rs  observability.rs  registration.rs  services.rs  worldgen.rs
crates/freven_world_guest/: Cargo.toml
crates/freven_world_guest/src/: lib.rs
crates/freven_world_guest_sdk/: Cargo.toml  README.md
crates/freven_world_guest_sdk/src/: lib.rs
crates/freven_world_guest_sdk/tests/: log_macros.rs
crates/freven_world_sdk_types/: Cargo.toml
crates/freven_world_sdk_types/src/: blocks.rs  lib.rs  observability.rs  save.rs  voxel.rs
docs/: ARCHITECTURE.md  BLOCK_VISUAL_DEFINITIONS_v1.md  CONTENT_AUTHORING_PROFILES_v1.md  CONTENT_PATCH_MERGE_v1.md  CONTENT_VARIANT_FAMILY_SCHEMA_v1.md  CREATOR_CONTENT_SCHEMA_v1.md  DATA_DRIVEN_AUTHORING_LAYER_v1.md  EXTERNAL_MOD_IPC_v1.md  GUEST_CONTRACT_v1.md  LAYERED_ASSET_OVERRIDES_v1.md  LIGHTING_FOUNDATION_v1.md  MATERIAL_DEFINITIONS_v1.md  MODEL_ASSET_FORMAT_v1.md  MODULAR_CONTENT_MANIFESTS_v1.md  MOD_CONFIG_v1.md  NATIVE_MOD_ABI_v1.md  NEUTRAL_GUEST_CONTRACT_v1.md  PACKAGE_BOUNDARIES.md  README.md  SDK_DISTRIBUTION.md  SHADER_EFFECT_BOUNDARY_v1.md  TEXTURE_AUTHORING_v1.md  TEXTURE_BACKEND_PIPELINE_v1.md  UNSAFE_NATIVE_MODS.md  VISUAL_ASSET_MODEL_v1.md  WASM_ABI_v1.md  WASM_AUTHORING.md  WORLDGEN_PROVIDER_CONCURRENCY_v1.md  WORLD_ASYNC_SERVICE_MODEL_v1.md
examples/first_wasm_mod/: Cargo.toml  README.md  mod.toml
examples/first_wasm_mod/src/: lib.rs
fixtures/visual_content_schema_v1/: README.md
fixtures/visual_content_schema_v1/expected/: consumer_map.toml  invalid_diagnostics.toml  valid_keys.toml
fixtures/visual_content_schema_v1/invalid/invalid_family_combination/: family_invalid_combination.toml
fixtures/visual_content_schema_v1/invalid/invalid_tint_source/: visual_invalid_tint_source.toml
fixtures/visual_content_schema_v1/invalid/missing_model/: visual_missing_model.toml
fixtures/visual_content_schema_v1/invalid/renderer_internal_leak/: visual_renderer_internal_leak.toml
fixtures/visual_content_schema_v1/invalid/unknown_material_slot/: visual_unknown_material_slot.toml
fixtures/visual_content_schema_v1/valid/cube_all/: material_stone.toml  model_cube_all.toml  visual_stone.toml
fixtures/visual_content_schema_v1/valid/cube_faces/: material_dirt.toml  material_grass_side.toml  material_grass_top.toml  model_cube_faces.toml  visual_grass_block.toml
fixtures/visual_content_schema_v1/valid/cuboid_parts_framed_glass/: material_blue_glass.toml  material_iron_frame.toml  model_framed_glass.toml  visual_framed_glass.toml
fixtures/visual_content_schema_v1/valid/emissive_material_no_light/: material_glow_ore.toml
fixtures/visual_content_schema_v1/valid/emissive_material_with_light/: material_lamp.toml
fixtures/visual_content_schema_v1/valid/families/: colored_glass_family.toml  rock_family.toml  soil_grass_family.toml
fixtures/visual_content_schema_v1/valid/grass_tint_slots/: model_grass_tint_cube.toml  visual_tinted_grass_block.toml
