[package]
name = "freven_api"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Stable SDK contracts for Freven experiences and compile-time mods."
readme = "README.md"
# TODO(publish): keep private until workspace-level package metadata includes
# repository/documentation/homepage values and crates.io release ownership is set.
# TODO(publish): once metadata and release ownership are coherent, flip to true.
publish = false

[dependencies]
freven_sdk_types = { path = "../freven_sdk_types" }
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
