[package]
name = "freven_api"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Stable SDK contracts for Freven experiences and compile-time mods."
readme = "README.md"
# TODO(publish): keep private until [workspace.package] includes repository/homepage/documentation
# and we have an explicit crates.io release/ownership policy for public distribution.
publish = false

[dependencies]
freven_sdk_types = { path = "../freven_sdk_types" }
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
