[package]
name = "freven_api"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Stable SDK contracts for Freven experiences and compile-time mods."
readme = "README.md"
publish = false

[dependencies]
freven_sdk_types.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
