[package]
name = "freven_mod_api"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Stable SDK contracts for Freven builtin and compile-time mod authoring."
readme = "README.md"
publish = false

[dependencies]
freven_guest.workspace = true
freven_sdk_types.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
