[package]
name = "freven_sdk_types"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Shared pure SDK data contracts for Freven."
publish = true

[dependencies]
serde.workspace = true
