[package]
name = "freven_volumetric_api"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Volumetric-owned public contracts for Freven world generation."
publish = false

[dependencies]
freven_volumetric_sdk_types.workspace = true
freven_block_sdk_types.workspace = true
thiserror.workspace = true
serde.workspace = true
