[package]
name = "freven_world_api"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Explicit world-owned SDK contracts for Freven gameplay and world stacks."
readme = "README.md"
publish = false

[dependencies]
freven_guest.workspace = true
freven_mod_api.workspace = true
freven_sdk_types.workspace = true
freven_world_guest.workspace = true
freven_world_sdk_types.workspace = true
freven_volumetric_api.workspace = true
freven_block_sdk_types.workspace = true
freven_block_guest.workspace = true
freven_block_api.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
