[package]
name = "freven_world_guest_sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
freven_guest.workspace = true
freven_sdk_types.workspace = true
freven_world_guest.workspace = true
freven_world_sdk_types.workspace = true
postcard.workspace = true
serde.workspace = true
toml.workspace = true
