[package]
name = "freven_world_sdk_types"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Explicit world-owned SDK data contracts for Freven."
publish = false

[dependencies]
serde.workspace = true
